resolving some scaling/overflow issues

--- a/src/components/booking/booking-stage/BookingStage.css
+++ b/src/components/booking/booking-stage/BookingStage.css
@@ -11,6 +11,7 @@
     height: 50%;
     background-color: #FFFFFF;
     color: black;
+    overflow: auto;
 }
 
 .booking-stage-main-text {
