--- a/src/components/expert/Expert.css
+++ b/src/components/expert/Expert.css
@@ -1,7 +1,7 @@
 
 
 .expert-box {
-    top: 50px;
+    top: 60px;
     position: relative;
     display: flex;
     width: 25%;
@@ -49,7 +49,8 @@
     margin-left: 5px;
     margin-right: 10px;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    overflow: auto;
 }
 .expert-info-tag {
     font-size: 0.9em;
